styleMain.css
body {
    background-color: #ffffff;
    /*padding-top: 0px;*/
    /*margin-top: 0px;*/
    /*width: 1rem;*/
    font-family: Avenir, Helvetica, Arial, sans-serif;
}

html {
    scroll-behavior: smooth;
}

.disable-dbl-tap-zoom {
    touch-action: manipulation;
}

header {
    background-color: #ff5400;
    margin-left: -0.5em;
    margin-right: -0.5em;
    margin-top: -1.25em;
    color: white;
    text-transform: uppercase;
    padding-top: 30px;
    /*position: absolute;*/
    /*left: 0;*/
    /*top: 0;*/
    /*height: 6vh;*/
    height: 100px;
    padding-bottom: 115px;

    /*
    border-bottom:1px solid #CCC;
    */
}

header h1 {
    /*vertical-align: ;*/
    position: relative;
    text-align: center;
    top: 16px;
    font-weight: lighter;
    background: -webkit-linear-gradient(#ffffff, #fff1c0);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 65px;
}

.body-text {
    text-align: center;
    font-size: 34px;
    font-weight: lighter;
    /*max-width: 60vw;*/
    padding-left: 10vw;
    padding-right: 10vw;
    line-height: 40px;
    color: white;
    padding-bottom: 20px;
}

.diamond-para-break {
    position: relative;
    left: -3px;
    width: 11px;
    height: auto;
    margin-top: 17px;
    margin-bottom: 7px;
}

a {
    color: white;
    text-underline: none;
}

a:hover {
    color: #fff1c0;
}

a:active {
    color: #fff1c0;
}

a.no-underline {
    text-decoration: none;
}

.content {
    background-image: url("bkgda.png");
    position: absolute;
    left: 0;
    right: 0;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    height: 4730px;
    background-repeat: no-repeat;
}

#culture-history {
    position: absolute;
    left: 80px;
    top: 440px;
}

#culture-food {
    position: absolute;
    right: 50px;
    top: 1280px;
}

#gameSection {
    position: absolute;
    top: 3600px;
    right: 90px;
}

.noscroll {
    overflow: hidden;
}

.footer {
    position: absolute;
    top: 4550px;
    text-align: center;
    font-size: 40px;
    text-transform: uppercase;
    padding-left: 155px;
}

.myCard {
    height: 70vh;
    width: 80vw;
    position: absolute;
    left: 9.5vw;
    top: 20vh;
    border: 2px solid;
    border-radius: 4rem;
    /*padding: 8rem;*/
    box-shadow: 0 0 0.9em #000;
}

.myCard .cardContent {
    padding: 4rem;
    padding-top: 2rem;
    margin: 0;
}

.myCard .cardContent p {
    text-align: center;
    /*TODO*/
    /*font: ;*/
    /*color: ;*/
    /*color: aqua;*/
    padding: 0;
    margin: -0.1em;
    font-size: 5vh;
}

.myCard .cardContent .answerCard {
    position: absolute;
    height: 8vh;
    width: 70vw;
    border: 1px solid;
    border-radius: 1rem;
    box-shadow: 0 0 0.4rem #000;
}

.myCard .cardContent .answerCard p {
    text-align: center;
    vertical-align: center;
    font-size: 3vh;
    padding: 1em;
    position: relative;
    top: 0;
    margin-top: -0.25em;
}

.myCard .cardContent .answerCard:hover {
    /*TODO*/
}

.myCard .cardContent .answerCard:active {
    box-shadow: 0 0 0.1em #000;
    /*TODO*/
}

.button-card {
    border-radius: 1rem;
    box-shadow: 0 0 0.3rem #500000;
    border: 1px solid;
    position: absolute;
    height: 8vh;
    width: 20vw;
    color: #ff5400;
    background-color: #fff1c0;
    text-decoration: none;
    text-align: center;
    font-size: 30px;
    left: 185px;
}

.button-card:active {
    box-shadow: 0 0 0.6rem #500000;
    color: #ff5400;
    font-weight: normal;
}

.button-card:hover {
    box-shadow: 0 0 0.6rem #500000;
    color: #ff5400;
    font-weight: normal;
}

